# cambemul

./: .gitignore  DESIGN.md  LICENSE  README.md  emulators.txt  get_emulators.sh  pyproject.toml
examples/: lcdm.yaml
scripts/: bench_accuracy.py  get_emulators.sh  make_training.py  make_training.submit  predict_example.py  test_emulator.py  train_emulator.py
scripts/logs/: gen_582082_1.out  gen_582084_1.out  gen_582096_0.out  gen_582096_1.out
src/cambemul/: __init__.py  cobaya_theory.py  dataset.py  emulator.py  priors.py  theory.py  warp.py
tests/: test_smoke.py
